--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.4.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.1.2",
     "@nestjs/swagger": "^7.4.2",
     "axios": "^1.7.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
     "form-data": "^4.0.1",
     "ioredis": "^5.4.1",
     "nestjs-form-data": "^1.9.92",
