--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
-API_GATEWAY_SERVICE_PORT=
+API_GATEWAY_SERVICE_PORT=4000
 
-REDIS_HOST=
-REDIS_PORT=
+# si solo levantas redis en el dockercompose, sin la app
+# de nest js se pone el localhost
+# pero si corres dentro del compose la app y la db de redis se pone el nombre del servicio redis
+
+REDIS_HOST="localhost"
+REDIS_PORT=6379
+
+API_MICROSERVICES_FILES="http://localhost:8080"
