--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x, 22.x]
+        node-version: [22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -25,4 +25,15 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run lint
-    # - run: npm run build
+
+      - name: Build the project
+        run: npm run build --if-present
+
+      - name: Runing the project
+        run: npm run start:prod
+
+        env:
+          NODE_ENV: production
+
+       
+
