--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.7.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
     "form-data": "^4.0.1",
     "ioredis": "^5.4.1",
@@ -46,6 +47,7 @@
     "@nestjs/cli": "^10.4.7",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
