--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - run: npm ci
       - run: npm run lint
 
-      - name: Build the project
+      - name: Build app for production
         run: npm run build --if-present
 
         env:
