update environment configuration files and Dockerfile; add URL_CLIENT variable and enhance roles guard logic

--- a/.env.production
+++ b/.env.production
@@ -9,3 +9,4 @@ REDIS_PORT=6379
 
 API_MICROSERVICES_FILES="http://localhost:8080"
 NODE_ENV=production
+URL_CLIENT="https://master.d2l2oxroeqqeuk.amplifyapp.com/"
