--- a/.env.production
+++ b/.env.production
@@ -8,5 +8,5 @@ REDIS_HOST="localhost"
 REDIS_PORT=6379
 
 API_MICROSERVICES_FILES="http://localhost:8080"
-NODE_ENV=production
+NODE_ENV="production"
 URL_CLIENT="https://master.d2l2oxroeqqeuk.amplifyapp.com"
