update environment variables for development and production; rename API_MICROSERVICES_FILES and adjust logic in ImagesService constructor

--- a/.env.production
+++ b/.env.production
@@ -7,6 +7,6 @@ RABBITMQ_URL=amqp://guest:guest@localhost:5672
 REDIS_HOST="localhost"
 REDIS_PORT=6379
 
-API_MICROSERVICES_FILES="http://localhost:8080"
+API_MICROSERVICES_FILES_PRODUCTION="URL_LAMBA"
 NODE_ENV="production"
 URL_CLIENT="https://master.d2l2oxroeqqeuk.amplifyapp.com"
