--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
-    "start:prod": "cross-env NODE_ENV=production  node dist/main.js",
+    "start:prod": "cross-env NODE_ENV=production  node dist/main",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:debug": "nest start --debug --watch",
@@ -36,7 +36,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
+    "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
+    "dotenv-flow": "^4.1.0",
     "form-data": "^4.0.1",
     "ioredis": "^5.4.1",
     "nestjs-form-data": "^1.9.92",
