update .env.development and .env.production

--- a/.env.production
+++ b/.env.production
@@ -9,3 +9,5 @@ REDIS_PORT=6379
 
 API_MICROSERVICES_FILES="URL_LAMBA"
 URL_CLIENT="https://master.d2l2oxroeqqeuk.amplifyapp.com"
+
+NODE_ENV="production"
