--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,3 +25,7 @@ jobs:
       - run: npm run lint
       - name: Build app for production
         run: npm run build --if-present
+      
+      - name: Format code
+        run:  npm run format
+      
