update .env.example, category.module.ts and clients.module.ts

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,9 @@ RABBITMQ_URL=amqp://guest:guest@localhost:5672
 
 REDIS_HOST="localhost"
 REDIS_PORT=6379
+REDIS_PASSWORD=""
 
 API_MICROSERVICES_FILES="http://localhost:8080"
 URL_CLIENT="localhost"
 
-NODE_ENV=
+NODE_ENV=development
