--- a/.env.development
+++ b/.env.development
@@ -6,6 +6,7 @@ RABBITMQ_URL=amqp://guest:guest@localhost:5672
 
 REDIS_HOST="localhost"
 REDIS_PORT=6379
+REDIS_PASSWORD=""
 
 API_MICROSERVICES_FILES="http://localhost:8080"
 URL_CLIENT="localhost"
